--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <author>Zachary Lazzara</author>
+        <meta name="author">Zachary Lazzara>
         <title>Shopify Backend Developer Intern Challenge</title>
         
         
