--- a/index.html
+++ b/index.html
@@ -3,11 +3,41 @@
     <head>
         <meta name="author" content="Zachary Lazzara">
         <title>Shopify Backend Developer Intern Challenge</title>
-        
-        
+        <script src="https://code.jquery.com/jquery-3.5.1.min.js" integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
+        <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css" integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
+        <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ho+j7jyWK8fNQe+A12Hb8AhRq26LrZ/JpcUGGOn+Y7RsweNrtN/tE3MoK7ZeZDyx" crossorigin="anonymous"></script>
     </head>
     <body>
-        <button id="oauth" onclick="login()">Login</button>
+        <nav class="navbar navbar-expand-sm bg-dark navbar-dark sticky-top">
+            <a class="navbar-brand" href="#">Code Challenge</a>
+            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#items" aria-controls="navbarSupported">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+
+            <div class="collapse navbar-collapse" id="items">
+                <ul class="navbar-nav mr-auto">
+                    <li class="nav-item">
+                        <div class="input-group mb-3 my-auto">
+                            <select class="custom-select col-3" id="permission">
+                                <option selected value="private">private</option>
+                                <option value="public">public</option>
+                            </select>
+                            <div class="custom-file">
+                                <input type="file" class="custom-file-input btn" id="upload" name="filename">
+                                <label class="custom-file-label" for="upload" id="upload-label">Choose image</label>
+                            </div>
+                            <div class="input-group-append">
+                                <span class="btn btn-success">Upload</span>
+                            </div>
+                        </div>
+                    </li>
+                </ul>
+                <button class="btn btn-success" id="authBtn">Login</button>
+            </div>
+        </nav>
+
+
+
         <div id="private"></div>
         <div id="public"></div>
 
