Set the input field to only accept images

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
                                 <option value="public">public</option>
                             </select>
                             <div class="custom-file">
-                                <input type="file" class="custom-file-input btn" id="upload" name="filename">
+                                <input type="file" accept="image/*" class="custom-file-input btn" id="upload" name="filename">
                                 <label class="custom-file-label" for="upload" id="upload-label">Choose image</label>
                             </div>
                             <div class="input-group-append">
