Added an event listener to the upload button

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
                                 <label class="custom-file-label" for="upload" id="upload-label">Choose image</label>
                             </div>
                             <div class="input-group-append">
-                                <span class="btn btn-success">Upload</span>
+                                <span class="btn btn-success" id="uploadBtn">Upload</span>
                             </div>
                         </div>
                     </li>
