Labeled the private images section and the public section

--- a/index.html
+++ b/index.html
@@ -36,9 +36,10 @@
             </div>
         </nav>
 
-
-
+        <h3>Private Images:</h3>
         <div id="private"></div>
+        <br>
+        <h3>Public Images:</h3>
         <div id="public"></div>
 
 
