--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
         <script src="https://code.jquery.com/jquery-3.5.1.min.js" integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
         <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css" integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ho+j7jyWK8fNQe+A12Hb8AhRq26LrZ/JpcUGGOn+Y7RsweNrtN/tE3MoK7ZeZDyx" crossorigin="anonymous"></script>
+        <link rel="stylesheet" href="styles/style.css">
     </head>
     <body onload="initialize()">
         <nav class="navbar navbar-expand-sm bg-dark navbar-dark sticky-top">
@@ -36,11 +37,39 @@
             </div>
         </nav>
 
-        <h6>Private Images:</h6>
-        <div id="private"></div>
-        <br>
-        <h6>Public Images:</h6>
-        <div id="public"></div>
+        <div id="content">
+           
+
+            <div id="private">
+
+
+                
+                <div class="card image-card">
+                    <img class="image card-img-top" src="https://www.ctvnews.ca/polopoly_fs/1.5048361.1596311985!/httpImage/image.jpg_gen/derivatives/landscape_1020/image.jpg">
+                    <div class="card-body">
+                        <h4 class="card-title">Fox.jpg</h4>
+                        <hr>
+                        <div class="d-flex justify-content-between">
+                            <div class="d-flex">
+                                <img class="avatar" src="https://www.ctvnews.ca/polopoly_fs/1.5048361.1596311985!/httpImage/image.jpg_gen/derivatives/landscape_1020/image.jpg">
+                                <p>&nbsp;&nbsp;</p>
+                                <div>
+                                    <h6 class="profile">Zachary</h6>
+                                    <h6 class="profile"><small>email@email.com</small></h6>
+                                </div>
+                            </div>
+                            <button class="btn btn-danger right-align">Delete</button>
+                        </div>
+                    </div>
+                </div>
+
+
+
+
+            </div>
+            <hr>
+            <div id="public"></div>
+        </div>
 
 
 
