Comment out test layout

--- a/index.html
+++ b/index.html
@@ -43,8 +43,8 @@
             <div id="private">
 
 
-                
-                <div class="card image-card">
+
+                <!-- <div class="card image-card">
                     <img class="image card-img-top" src="https://www.ctvnews.ca/polopoly_fs/1.5048361.1596311985!/httpImage/image.jpg_gen/derivatives/landscape_1020/image.jpg">
                     <div class="card-body">
                         <h4 class="card-title">Fox.jpg</h4>
@@ -61,7 +61,7 @@
                             <button class="btn btn-danger right-align">Delete</button>
                         </div>
                     </div>
-                </div>
+                </div> -->
 
 
 
