Working on delete functionality

--- a/index.html
+++ b/index.html
@@ -38,41 +38,10 @@
         </nav>
 
         <div id="content">
-           
-
-            <div id="private">
-
-
-
-                <!-- <div class="card image-card">
-                    <img class="image card-img-top" src="https://www.ctvnews.ca/polopoly_fs/1.5048361.1596311985!/httpImage/image.jpg_gen/derivatives/landscape_1020/image.jpg">
-                    <div class="card-body">
-                        <h4 class="card-title">Fox.jpg</h4>
-                        <hr>
-                        <div class="d-flex justify-content-between">
-                            <div class="d-flex">
-                                <img class="avatar" src="https://www.ctvnews.ca/polopoly_fs/1.5048361.1596311985!/httpImage/image.jpg_gen/derivatives/landscape_1020/image.jpg">
-                                <p>&nbsp;&nbsp;</p>
-                                <div>
-                                    <h6 class="profile">Zachary</h6>
-                                    <h6 class="profile"><small>email@email.com</small></h6>
-                                </div>
-                            </div>
-                            <button class="btn btn-danger right-align">Delete</button>
-                        </div>
-                    </div>
-                </div> -->
-
-
-
-
-            </div>
+            <div id="private"></div>
             <hr>
             <div id="public"></div>
         </div>
-
-
-
         
         <script src="https://www.gstatic.com/firebasejs/8.2.1/firebase-app.js"></script>
         <script src="https://www.gstatic.com/firebasejs/8.2.1/firebase-auth.js"></script>
