Made it so elements will display beside each other (need to make it so they will wrap as well when exceeding screen size, but I'll do that later)

--- a/index.html
+++ b/index.html
@@ -38,9 +38,9 @@
         </nav>
 
         <div id="content">
-            <div id="private"></div>
+            <div class="d-flex" id="private"></div>
             <hr>
-            <div id="public"></div>
+            <div class="d-flex" id="public"></div>
         </div>
         
         <script src="https://www.gstatic.com/firebasejs/8.2.1/firebase-app.js"></script>
